# douyin-auto-reply

./: .gitignore  README.md  SKILL.md  config.example.json  pyproject.toml  requirements.txt
scripts/: douyin_client.py
